--- a/top.html
+++ b/top.html
@@ -1,10 +1,341 @@
-<!DOCTYPE html>
-<html>
- <head>
- <meta charset="utf-8">
- <title>top</title>
- </head>
- <body>
- <p>top</p>
- </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="robots" content="all" />
+<title>YouTuberまとめサイト</title>
+<link href="css/dcverticalmegamenu.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type='text/javascript' src='js/jquery.hoverIntent.minified.js'></script>
+<script type='text/javascript' src='js/jquery.dcverticalmegamenu.1.3.js'></script>
+<script type="text/javascript">
+$(document).ready(function($){
+
+	$('#mega-1').dcVerticalMegaMenu({
+		rowItems: '3',
+		speed: 'fast',
+		effect: 'show',
+		direction: 'right'
+	});
+	$('#mega-2').dcVerticalMegaMenu({
+		rowItems: '3',
+		speed: 'slow',
+		effect: 'fade',
+		direction: 'left'
+	});
+	$('#mega-3').dcVerticalMegaMenu({
+		rowItems: '4',
+		speed: 'slow',
+		effect: 'slide',
+		direction: 'right'
+	});
+	$('#mega-4').dcVerticalMegaMenu({
+		rowItems: '3',
+		speed: 'fast',
+		effect: 'slide',
+		direction: 'left'
+	});
+
+});
+</script>
+</head>
+<body>
+<div class="wrap">
+<h2>YouTuberまとめサイト</h2>
+<h3>ジャンル</h3>
+<p>
+youtubeが好きな人が集まるサイト
+</p>
+<div class="demo-container clear">
+<div class="test">
+<ul id="mega-1" class="mega-menu">
+<li><a href="#">大人気ユーチューバー</a>
+<ul>
+<li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+<li><a href="#">Sub-Header 4</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 5</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 6</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">時事ネタ</a>
+<ul>
+<li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#">ゲーム実況</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 4</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 5</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 6</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 7</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">料理</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 4</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 5</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 6</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">スポーツ</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+</ul></li>
+<li><a href="#">音楽</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 4</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 5</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 6</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 7</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">メカニック</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 3</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 4</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 5</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 6</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">芸能</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li></ul></li>
+<li><a href="#">その他</a>
+<ul><li><a href="#">Sub-Header 1</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+<li><a href="#">Sub-Header 2</a>
+<ul><li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li>
+<li><a href="#">Menu Link</a></li></ul></li>
+</ul></li></ul>
+
+</div>
+</div>
+
+
+</div>
+</div>
+
+</div>
+</body>
 </html>
